decreased margin on navbar li elements due to navbar overflow when on low resolution desktops, bug was caused because of the change to bold text in navbar text

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,7 +63,7 @@ body.scroll-inactive {
 #navbar nav ul li{
   display: inline;
   position: relative;
-  margin: 0 6%;
+  margin: 0 5%;
   font-weight: 700;
 }
 
